update book list 2018

--- a/_posts/book/2018-09-01-book-list-of-2018.md
+++ b/_posts/book/2018-09-01-book-list-of-2018.md
@@ -9,4 +9,4 @@ keywords: 阅读,书单,2013
 
 ![cover](https://img14.360buyimg.com/n1/jfs/t13072/209/839617461/785817/12cbbefd/5a14eeddN6fd253df.jpg)
 
-[狗东地址](http://git-scm.com/book)
+[狗东地址](https://item.jd.com/12243239.html)
