--- a/_posts/book/2018-09-01-book-list-of-2018.md
+++ b/_posts/book/2018-09-01-book-list-of-2018.md
@@ -9,8 +9,12 @@ keywords: 阅读,书单,2018
 
 ![cover](https://img14.360buyimg.com/n1/jfs/t13072/209/839617461/785817/12cbbefd/5a14eeddN6fd253df.jpg)
 
-[狗东地址](https://item.jd.com/12243239.html)
+[狗东地址](https://item.jd.com/12243239.html)
 
 ---
 
-## 
+## 从Paxos到Zookeeper分布式一致性原理与实践
+
+![cover](https://img12.360buyimg.com/n1/jfs/t490/38/1242617192/495352/88d3c3fc/54c22fd2N0a94f665.jpg)
+
+[狗东地址](https://item.jd.com/11622772.html)
