--- a/_posts/book/2018-09-01-book-list-of-2018.md
+++ b/_posts/book/2018-09-01-book-list-of-2018.md
@@ -5,7 +5,7 @@ category: 读书
 keywords: 阅读,书单,2018
 ---
 
-## C++语义和性能分析
+### C++语义和性能分析
 
 ![cover](https://img14.360buyimg.com/n1/jfs/t13072/209/839617461/785817/12cbbefd/5a14eeddN6fd253df.jpg)
 
@@ -13,7 +13,7 @@ keywords: 阅读,书单,2018
 
 ---
 
-## 从Paxos到Zookeeper分布式一致性原理与实践
+### 从Paxos到Zookeeper分布式一致性原理与实践
 
 ![cover](https://img12.360buyimg.com/n1/jfs/t490/38/1242617192/495352/88d3c3fc/54c22fd2N0a94f665.jpg)
 
