add design patterns

--- a/_posts/book/2018-09-01-book-list-of-2018.md
+++ b/_posts/book/2018-09-01-book-list-of-2018.md
@@ -18,3 +18,7 @@ keywords: 阅读,书单,2018
 ![cover](https://img12.360buyimg.com/n1/jfs/t490/38/1242617192/495352/88d3c3fc/54c22fd2N0a94f665.jpg)
 
 [狗东地址](https://item.jd.com/11622772.html)
+
+
+书单：
+古今数学思想（套装共3册）
