--- a/_posts/life/2020-12-28-moto-list.md
+++ b/_posts/life/2020-12-28-moto-list.md
@@ -11,3 +11,11 @@ description:
 2. 不要轻易地去论断他人，因为我们的认识能力是有限的
 
 3. 不要过分放纵自己，因为快乐来得越容易越廉价，就越不能长久
+
+4. 不要沉溺在对结果没有直接帮助只是因为自己遭受了一些痛苦的行为中，误以为那就是努力
+
+5. 这些年我一直提醒自己一件事情，千万不要自己感动自己。大部分人看似的努力，不过是愚蠢导致的。什么熬夜看书到天亮，连续几天只睡几小时，多久没放假了，如果这些东西也值得夸耀，那么富士康流水线上任何一个人都比你努力多了。人难免天生有自怜的情绪，唯有时刻保持清醒，才能看清真正的价值在哪里
+
+6. 不要猜测别人动机，而要看别人做的事
+
+7. 夏季的雷阵雨，其实和春天的花开秋天的月亮一样，遇到了好好欣赏。特别是你站在窗口看着天地滂沱，雷声滚滚，忍不住想起往事的时候，却看到街上的人四散奔逃，像那些往事一样。
