--- a/_posts/life/2020-12-28-moto-list.md
+++ b/_posts/life/2020-12-28-moto-list.md
@@ -18,4 +18,6 @@ description:
 
 6. 不要猜测别人动机，而要看别人做的事
 
-7. 夏季的雷阵雨，其实和春天的花开秋天的月亮一样，遇到了好好欣赏。特别是你站在窗口看着天地滂沱，雷声滚滚，忍不住想起往事的时候，却看到街上的人四散奔逃，像那些往事一样。
+7. 夏季的雷阵雨，其实和春天的花开秋天的月亮一样，遇到了好好欣赏。特别是你站在窗口看着天地滂沱，雷声滚滚，忍不住想起往事的时候，却看到街上的人四散奔逃，像那些往事一样
+
+8. 不自卑的表现是，听不懂就问到底是啥，买不起就说有些贵，配不上就说那算了。但是大多数人，都是听不懂也点点头，买不起说不稀罕，配不上说不过随便玩玩 。有时候，内心应激的自我保护，会让旁人觉得你不够自信不够实诚
