update book list

--- a/_posts/book/2021-01-01-book-list-of-2020.md
+++ b/_posts/book/2021-01-01-book-list-of-2020.md
@@ -5,7 +5,7 @@ category: 读书
 keywords: 阅读,书单,2020
 ---
 
-# 书单
+## 书单
 
 ## 技术
 
@@ -13,11 +13,49 @@ keywords: 阅读,书单,2020
 2. 从Paxos到Zookeeper分布式一致性原理与实践
 3. 古今数学思想（套装共3册）
 4. 重构与模式
+5. Erlang程序设计 第2版
+6. 事件流实战
+7. JavaScript ES6 函数式编程入门经典
+8. ES6标准入门 第3版
+9. Linux内核观测技术BPF
+10. 程序员修炼之道 第2版
+11. 现代操作系统：原理与实现
+12. 重构 改善既有代码的设计 第2版
+13. 程序员代码面试指南：IT名企算法与数据结构题目最优解
+14. Effective Pytho
+15. 深入理解Python特性
+16. 算法精粹
+17. 架构整洁之道
+18. 网络是怎样连接的
+19. 图解TCP/IP 第5版
+20. Effective Java
+21. 程序员修炼之道：通向务实的最高境界（第2版)
+22. 计算机体系结构：量化研究方法（英文版·原书第6版）
+23. 规模分布式存储系统：原理解析与架构实战
+24. 高可用架构 
+25. 大型网站技术架构 核心原理与案例分析
+26. BPF之巅：洞悉Linux系统和应用性能
+27. labuladong的算法小抄
+28. 软件开发方法学精选系列：重构与模式
+29. 代码整洁之道
+30. 古今数学思想
+31. BPF Performance Tools
+32. Windows Internals
+33. C++函数式编程
+34. Linux高性能服务器编程
 
 ## 其它
 
-1. 高效能人士的七个习惯
+1. 货币银行学
+2. 金融学概论
+3. 批判性思维
+4. 图论导引
+5. 最后的数学问题
+6. 高效能人士的七个习惯
+7. 最后的数学问题
 
-# todo
+## todo
 
 1. 理解json解析，json对比
+
+## done
